# polylite-for-windows

./: .gitignore  README.md  environment.yml  pyproject.toml  run_quick_trade.bat
src/polymarket_terminal/: __init__.py  __main__.py  adapters.py  auth.py  client.py  credentials.py  models.py  pricing.py  quick_trade.py  quick_trade_flow.py
tests/: test_adapters.py  test_auth.py  test_pricing.py  test_quick_trade_flow.py  test_quick_trade_ui.py
